# InstantReality

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Glitter/Assets/cman/: LICENSE  cman.mtl
Glitter/Assets/terrain/: plane.mtl  skybox_back.mtl  skybox_bottom.mtl  skybox_front.mtl  skybox_left.mtl  skybox_right.mtl  skybox_top.mtl
Glitter/Assets/viking/: LICENSE  viking-rotated.mtl
Glitter/Headers/: glitter.hpp  mesh.hpp  shader.hpp  utility.hpp  vr.h
Glitter/Shaders/: background.frag  background.vert  skybox.frag  skybox.vert  tessellation.frag  tessellation.tcs  tessellation.tes  tessellation.vert
Glitter/Sources/: main.cpp  mesh.cpp  shader.cpp  vr.cpp
NeuralAccelerator/: .flake8  .gitignore  constants.py  network.py  pyproject.toml  requirements.txt  sample_data.json  server.py  test.sh  test_fixation.py  test_saccade.py  train.sh  train_fixation.py  train_saccade.py  visualizer.py
